fix: wrap text correctly

--- a/style.css
+++ b/style.css
@@ -88,6 +88,8 @@ p {
 .tagline {
     font-weight: 500;
     font-size: 2.5rem;
+    width: 60%;
+    text-wrap: balance;
 }
 
 .principles {
